kubernetes/networkpolicies/deny-all.yaml
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: default-deny-all
spec:
  podSelector:
    matchLabels:
      app: cloudflared
  policyTypes:
    - Ingress
    - Egress
