kubernetes/networkpolicies/ns.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: deny-all-ingress
  namespace: linkding
spec:
  podSelector: {} # Selects all pods in the namespace
  policyTypes:
    - Ingress
